; ModuleID = '/home/carl/AnghaBench/http-parser/extr_test.c_header_value_cb.c'
source_filename = "/home/carl/AnghaBench/http-parser/extr_test.c_header_value_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.message = type { i32, i32, i32** }

@parser = common dso_local global i32 0, align 4
@messages = common dso_local global %struct.message* null, align 8
@num_messages = common dso_local global i64 0, align 8
@VALUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @header_value_cb(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.message*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp eq i32* %8, @parser
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.message*, %struct.message** @messages, align 8
  %13 = load i64, i64* @num_messages, align 8
  %14 = getelementptr inbounds %struct.message, %struct.message* %12, i64 %13
  store %struct.message* %14, %struct.message** %7, align 8
  %15 = load %struct.message*, %struct.message** %7, align 8
  %16 = getelementptr inbounds %struct.message, %struct.message* %15, i32 0, i32 2
  %17 = load i32**, i32*** %16, align 8
  %18 = load %struct.message*, %struct.message** %7, align 8
  %19 = getelementptr inbounds %struct.message, %struct.message* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = sub nsw i32 %20, 1
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32*, i32** %17, i64 %22
  %24 = load i32*, i32** %23, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 1
  %26 = load i32, i32* %25, align 4
  %27 = load i8*, i8** %5, align 8
  %28 = load i64, i64* %6, align 8
  %29 = call i32 @strlncat(i32 %26, i32 4, i8* %27, i64 %28)
  %30 = load i32, i32* @VALUE, align 4
  %31 = load %struct.message*, %struct.message** %7, align 8
  %32 = getelementptr inbounds %struct.message, %struct.message* %31, i32 0, i32 1
  store i32 %30, i32* %32, align 4
  ret i32 0
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @strlncat(i32, i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
